<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_professor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProdutosFragment">

    <TextView
        android:id="@+id/tvProdutos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="35dp"
        android:text="@string/produtos"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnBuscarProduto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edCodigoProduto"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="67dp"
        android:layout_marginBottom="73dp"
        android:ems="10"
        android:hint="@string/codigo"
        android:inputType="numberSigned"
        app:layout_constraintBottom_toBottomOf="@+id/edNomeProduto"
        app:layout_constraintEnd_toStartOf="@+id/btnBuscarProduto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvProdutos"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/etQuantidadeProduto"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="264dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="129dp"
        android:ems="10"
        android:hint="@string/quantidade"
        android:inputType="numberSigned"
        app:layout_constraintBottom_toTopOf="@+id/tvListaProdutos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edPrecoProduto"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edNomeProduto"
        android:layout_width="379dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/nome"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/edPrecoProduto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBuscarProduto" />

    <EditText
        android:id="@+id/edPrecoProduto"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="23dp"
        android:ems="10"
        android:hint="@string/preco"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/btnInserirProduto"
        app:layout_constraintEnd_toStartOf="@+id/etQuantidadeProduto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edNomeProduto" />

    <Button
        android:id="@+id/btnBuscarProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="25dp"
        android:text="@string/buscar"
        app:layout_constraintBottom_toTopOf="@+id/edNomeProduto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edCodigoProduto"
        app:layout_constraintTop_toBottomOf="@+id/tvProdutos" />

    <Button
        android:id="@+id/btnInserirProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="347dp"
        android:text="@string/inserir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnModificarProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="347dp"
        android:text="@string/modificar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnBuscarProduto"
        app:layout_constraintStart_toEndOf="@+id/btnInserirProduto" />

    <Button
        android:id="@+id/btnExcluirProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="5dp"
        android:text="@string/excluir"
        app:layout_constraintBottom_toTopOf="@+id/btnListarProduto"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnListarProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="294dp"
        android:text="@string/listar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btnExcluirProduto" />

    <TextView
        android:id="@+id/tvListaProdutos"
        android:layout_width="383dp"
        android:layout_height="0dp"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="23dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etQuantidadeProduto" />
</androidx.constraintlayout.widget.ConstraintLayout>